# omar_os

./: Cargo.toml
.cargo/: config.toml
.zed/: settings.json
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
