[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
pic8259 = "0.10.1"
x86_64 = "0.15.4"
linked_list_allocator = "0.9.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[toolchain]
channel = "nightly"
